<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/tvImageSizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/spinnerImageSize"
        android:layout_alignTop="@+id/spinnerImageSize"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/image_size_label"/>

    <Spinner
        android:id="@+id/spinnerImageSize"
        android:layout_marginLeft="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/tvImageSizeLabel"
        android:layout_alignParentRight="true"
        android:entries="@array/imageSizes"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/tvColorFilterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/spinnerColorFilter"
        android:layout_alignTop="@+id/spinnerColorFilter"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/color_filter_label"/>

    <Spinner
        android:id="@+id/spinnerColorFilter"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerImageSize"
        android:layout_toRightOf="@+id/tvColorFilterLabel"
        android:layout_alignParentRight="true"
        android:entries="@array/colors"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/tvImageTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tvColorFilterLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/image_type_label"/>

    <Spinner
        android:id="@+id/spinnerImageType"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvImageTypeLabel"
        android:layout_below="@+id/spinnerColorFilter"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:entries="@array/imageTypes"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/tvSiteFilterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerImageType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/site_filter_label"
        />

    <EditText
        android:id="@+id/etSiteName"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvSiteFilterLabel"
        android:layout_toRightOf="@+id/tvSiteFilterLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/spinnerImageType"
        android:hint="e.g. codepath.com"
        android:textSize="13sp"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_save"
        android:textSize="13sp"
        android:layout_below="@+id/etSiteName"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_marginLeft="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_cancel"
        android:textSize="13sp"
        android:layout_below="@+id/etSiteName"
        android:layout_toRightOf="@id/btnSave"
        android:layout_centerHorizontal="true" />

</RelativeLayout>